# EvoCode

./: README.md  debug_fitness.py  evocode-project.py
evocode/: pyproject.toml  setup.py
evocode/evocode/: __init__.py  core.py  engine.py  fitness.py  mutation.py  utils.py  visualization.py
evocode/evocode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evocode/evocode/web/: __init__.py  __main__.py  app.py  code_runner.py  routes.py
evocode/evocode/web/static/css/: style.css
evocode/evocode/web/static/js/: main.js
evocode/evocode/web/templates/: base.html  error.html  index.html
examples/: sorting_optimization.py
tests/: __init__.py  test_core.py
